--- a/todo.txt
+++ b/todo.txt
@@ -15,6 +15,8 @@
       I want to fetch all activities within a time period!
   - as much as possible, pass objects to template, not raw strings
 
+REFACTOR EVERYTHING
+
 LOGS:
 20-September-2012
 - made comment database work
