--- a/todo.txt
+++ b/todo.txt
@@ -21,3 +21,5 @@ LOGS:
 20-September-2012
 - made comment database work
 - store time input from panel in UTC (time_input - user.timezone)
+
+this line is added just because
