--- a/todo.txt
+++ b/todo.txt
@@ -19,8 +19,8 @@
     - for meal menus
     - for travel origin/destinations
     - think of a way to add photos to everything!
-  - add cups of coffee so far today stats
   - find a way to make charts
+  - batch recorders
   
 - I AM SO PRETTY
   - arrange panel more logically
@@ -35,6 +35,7 @@ DONE:
 
 - PARTY AT THE BACK
     - consolidated coffee status functions in stats.py (17-Oct-2012)
+    - add cups of coffee so far today stats
 
 - I AM SO PRETTY
     - began public user page (17-Oct-2012)
