--- a/todo.txt
+++ b/todo.txt
@@ -3,9 +3,9 @@
   - categorize todo list (this file)
   
 - MOAR CSS
-  - make textarea fit div sizes
   
 - PARTY AT THE BACK
+  - caching
   - think of a better way to do stats (minimize database hits!)
     - do stats in batch, store in UserModel?
     - build things in cacheable manner, calculate stats in handler, not template
@@ -15,25 +15,26 @@
     - am I abusing regex now?
   - add option to show off purchases
   - photo uploading capability
-    - for self portrait
     - for meal menus
     - for travel origin/destinations
     - think of a way to add photos to everything!
-  - find a way to make charts
   - batch recorders
   
 - I AM SO PRETTY
   - arrange panel more logically
   - put latest submission to panel page (it's important to cache data into UserModel or w/e)
   - configurable data presentation table
-  - make space for photos
   - put travel in userpage
 
 DONE:
 - MOAR CSS
-  - shifted a few things arond (16-Oct-2012)
+  - shifted a few things around (16-Oct-2012)
 
 - PARTY AT THE BACK
+    - added sleep hours chart (23-Oct-2012)
+    - improved sleep stats (23-Oct-2012)
+    - fixed coffee stats (23-Oct-2012)
+    - added photo uploading for user (21-Oct-2012)
     - added batch activity recorder (21-Oct-2012)
     - added batch timed activity recorder (20-Oct-2012)
     - consolidated coffee status functions in stats.py (17-Oct-2012)
